# sma_outfits_20260218

./: .gitattributes  .gitignore  AGENTS.md  ASSUMPTIONS.md  Efficiency_Upgrade_PLAN.md  End_of_Phase1_Report.md  EofPh1.md  Freeze_Enforce_Complete_PLAN.md  Makefile  New_PLAN.md  Null_Hypothesis.md  Phase2_PLAN.md  Proven_Edge_PLAN.md  README.md  UnfairMkt_X_Context.md  alpaca_only_recreation_plan.md  audit_PLAN.md  cross_symbol_context_PLAN.md  dual_lane_align_PLAN.md  e2e_output.txt  grok_v6_PLAN.md  ignored_coverage_details.csv  ignored_coverage_quality.json  make_commands.md  no_fallback_PLAN.md  pyproject.toml  replication_lane_pass_PLAN.md  ticker_tf_sig_list.md
artifacts/readiness/: phase1_closure_acceptance.json  phase1_closure_acceptance.json.sha256
audit/history/: Freeze_Enforce_Complete_PLAN.md
configs/: settings.example.yaml  settings.jan2025_confluence_atr.yaml  settings.jan2025_confluence_atr_svix211_106.yaml  settings.jan2025_confluence_atr_svix211_106_crossctx_context_v1.yaml  settings.jan2025_confluence_atr_svix211_106_crossctx_mixed_trigger_v1.yaml  settings.jan2025_confluence_atr_svix211_106_crossctx_replication_v1.yaml  settings.jan2025_confluence_atr_svix211_106_crossctx_v1.yaml  settings.jan2025_confluence_atr_svix211_116.yaml
docs/: ticker_tf_execution_backlog.md
docs/history/: README.md
scripts/: pair_batch.ps1  phase1_close.ps1
src/sma_outfits/: cli.py  events.py  execution.py  runtime.py  utils.py
tests/: conftest.py
tests/integration/: test_live_pipeline_mocked.py  test_live_pipeline_optional.py  test_replay_pipeline.py  (+2 more)
(+97 files in other folders)
